LIFE-526 : fixing prediction trend percentage alignement

--- a/css/less/livescore/rules/base-tables/ls-base-tables-modals.less
+++ b/css/less/livescore/rules/base-tables/ls-base-tables-modals.less
@@ -63,6 +63,7 @@
             line-height: 23px;
             font-size: @font-size-normal;
             font-weight: @font-weight-semi-bold;
+            white-space: nowrap;
           }
         }
       }
